# PaikLab_Experiments

./: .gitattributes  README.md  pyproject.toml  s1300017_grad.ipynb
experiment_dir/rag_experiments/: main.py
experiment_dir/rag_experiments/config/: default_config.yaml  lightrag.yaml  vectorrag.yaml
experiment_dir/rag_experiments/src/LightRAG/: build_graph.py  init.py  run.py
experiment_dir/rag_experiments/src/VectorRAG/: build_vector.py  init.py  prompt.py  run.py
experiment_dir/rag_experiments/src/VectorRAG/faiss_index/: vectorrag_collection.faiss  vectorrag_collection_metadata.json
notebooks/: GraphRAG_0608_2026.ipynb  LLM_from_Scratch_0519_2026.ipynb  pyproject.toml  s1300017_grad_0425_2026.ipynb
notebooks/dickens/: kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_relations.json  vdb_chunks.json
notebooks_sandbox/: GraphRAG_0608_2026.ipynb  s1300017_grad_0425_2026.ipynb
notebooks_sandbox/datasets/: newSpeak1984_ja.txt  newSpeak1984_query.txt  newSpeak1984_rt.txt
notebooks_sandbox/dickens/: graph_chunk_entity_relation.graphml  kv_store_full_entities.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_entities.json  vdb_relationships.json
rag_experiments/config/: default_config.yaml
slides/: s1320112_MotohisaYamano_WhatIsLLM.pptx
