[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.8.5",
    "faiss-cpu>=1.14.2",
    "graphrag>=2.7.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-community==0.3.31",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lightrag-hku>=1.4.9.3",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "ragas==0.4.3",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.13",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=5.9.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
